@startuml

title __WEEK8-WEEK8_11.BOXESANDTHINGS's Class Diagram__\n

  package  {
    class Book {
    }
  }
  

  package  {
    class Book {
    }
  }
  

  package  {
    class Box {
    }
  }
  

  package  {
    class Box {
    }
  }
  

  package  {
    class CD {
    }
  }
  

  package  {
    class CD {
    }
  }
  

  package  {
    class Main {
    }
  }
  

  package  {
    class Main {
    }
  }
  

  package  {
    interface ToBeStored {
    }
  }
  

  package  {
    interface ToBeStored {
    }
  }
  

  Book -up-|> ToBeStored
  Book -up-|> ToBeStored
  Box -up-|> ToBeStored
  Box -up-|> ToBeStored
  CD -up-|> ToBeStored
  CD -up-|> ToBeStored


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
